[package]
name = "standard-dist"
version = "1.0.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MPL-2.0"
description = "Derivable random distributions for types"
repository = "https://github.com/Lucretiel/standard-dist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.0"
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = {version = "1.0.72", features = ["extra-traits", "full"]}

[dev-dependencies]
once_cell = "1.7.2"
rand = "0.8.3"
